k4s-food-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: food-app
  template:
    metadata:
      labels:
        app: food-app
    spec:
      containers:
      - name: food-app
        imagePullPolicy: Always
        image: k4sartifacts.azurecr.io/food:v1
---
kind: Service
apiVersion: v1
metadata:
  name: food-app-svc
spec:
  selector:
    app: food-app
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 5002
    targetPort: 80
