k4s-main-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
      - name: main-app
        imagePullPolicy: Always
        image: k4sartifacts.azurecr.io/main:v1
---
kind: Service
apiVersion: v1
metadata:
  name: main-app-svc
spec:
  selector:
    app: main-app
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 80
