k4s-news-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-app
  template:
    metadata:
      labels:
        app: news-app
    spec:
      containers:
      - name: news-app
        imagePullPolicy: Always
        image: k4sartifacts.azurecr.io/news:v1
---
kind: Service
apiVersion: v1
metadata:
  name: news-app-svc
spec:
  selector:
    app: news-app
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 5001
    targetPort: 80
